[package]
name = "bstr"
version = "1.0.0-pre.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "A string type that is not required to be valid UTF-8."
documentation = "https://docs.rs/bstr"
homepage = "https://github.com/BurntSushi/bstr"
repository = "https://github.com/BurntSushi/bstr"
readme = "README.md"
keywords = ["string", "str", "byte", "bytes", "text"]
license = "MIT OR Apache-2.0"
categories = ["text-processing", "encoding"]
exclude = ["/.github"]
edition = "2018"

[workspace]
members = ["bench"]

[lib]
bench = false

[features]
default = ["std", "unicode"]
std = ["alloc", "memchr/std"]
alloc = []
unicode = ["lazy_static", "regex-automata"]
serde1-std = ["std", "serde1-alloc", "serde/std"]
serde1-alloc = ["alloc", "serde1-core", "serde/alloc"]
serde1-core = ["serde"]

[dependencies]
memchr = { version = "2.4.0", default-features = false }
lazy_static = { version = "1.2.0", optional = true }
regex-automata = { version = "0.1.5", default-features = false, optional = true }
serde = { version = "1.0.85", default-features = false, optional = true }

[dev-dependencies]
quickcheck = { version = "1", default-features = false }
ucd-parse = "0.1.3"
unicode-segmentation = "1.2.1"

[profile.release]
debug = true

[[example]]
name = "graphemes"
required-features = ["std", "unicode"]

[[example]]
name = "lines"
required-features = ["std"]

[[example]]
name = "uppercase"
required-features = ["std", "unicode"]

[[example]]
name = "words"
required-features = ["std", "unicode"]
