[package]
publish = false
name = "bstr-bench"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Criterion benchmark suite for bstr."
homepage = "https://github.com/BurntSushi/bstr"
repository = "https://github.com/BurntSushi/bstr"
license = "Unlicense OR MIT"
edition = "2018"

[lib]
bench = false

[[bench]]
name = "bstr"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.3.4"
bstr = { version = "1.0.0-pre.1", path = ".." }
# For comparisons.
unicode-segmentation = "1.2.1"
